--- a/html/setaddressdetail.html
+++ b/html/setaddressdetail.html
@@ -7,17 +7,17 @@
     <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
     <title>设置详细地址</title>
     <link rel="stylesheet" type="text/css" href="../css/api.css" />
-    <style>    
+    <style>
     header {
         width: 100%;
         height: 50px;
         background-color: #e3007f;
     }
-    
+
     header .back {
         position: absolute;
-        bottom: 0;
-        left: 0;
+        left:0;
+        top: 26px;
         width: 50px;
         height: 50px;
         background: url(../image/back.png);
@@ -30,12 +30,31 @@
 
 <body>
     <header id="header">
-        <div class="back"></div>
+        <div class="back" onclick="api.closeWin()"></div>
     </header>
 </body>
 <script type="text/javascript" src="../script/api.js"></script>
 <script type="text/javascript">
 apiready = function() {
+  var login_header = document.querySelector('#header');
+  // 实现沉浸式状态栏效果
+  $api.fixStatusBar(login_header);
+  var y = $api.getStorage('headerH');
+  api.openFrame({
+      name: 'setaddressdetail_frame',
+      url: './setaddressdetail_frame.html',
+      rect: {
+          x: 0,
+          y: y,
+          w: 'auto',
+          h: 'auto'
+      },
+      pageParam: {
+          name: 'test'
+      },
+      bounces: true,
+  });
+
 };
 </script>
 
