--- a/html/setaddressdetail_frame.html
+++ b/html/setaddressdetail_frame.html
@@ -7,7 +7,7 @@
     <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
     <title>设置详细地址frame</title>
     <link rel="stylesheet" type="text/css" href="../css/api.css" />
-    <style>   
+    <style>
         html,body{
             height: 100%;
             background-color: #eee;
@@ -71,29 +71,96 @@
         .option .info .bottom{
             font-size:12px;
             color: #888;
+            overflow: hidden;
         }
     </style>
 </head>
 
 <body>
     <header id="header">
-        <input type="text" placeholder="小区/写字楼">
-        <div class="del">清空</div>
+        <input type="text" placeholder="小区/写字楼" id="myinput">
+        <div class="del" onclick="clearInput();">清空</div>
     </header>
     <section id="list">
-        <div class="option">
+        <!-- <div class="option">
             <div class="icon"></div>
             <div class="info">
                 <div class="top">门头沟</div>
                 <div class="bottom">正在获取.....</div>
             </div>
-        </div>
+        </div> -->
     </section>
 </body>
 <script type="text/javascript" src="../script/api.js"></script>
+<script src="../script/jquery-1.12.3.min.js"></script>
 <script type="text/javascript">
 apiready = function() {
-};
-</script>
 
+};
+//input数据双向绑定
+function watch(obj,key,callback) {
+    var old = obj[key];
+    Object.defineProperty(obj,key,{
+        set:function(val){
+            var oldVal = old;
+            old = val;
+            callback(val,oldVal,this);
+        },
+        get:function(){
+            return old;
+        }
+    });
+}
+var input = document.getElementById("myinput");
+var obj = {};
+watch(obj, "input",function (val) {
+    input.value = val;
+    // console.log("这里是不管view层，还是module层修改后的回调，最后设置的值是"+val);
+    // var keyword = $('input').val(val);
+    var city = $api.getStorage('currentCity');
+    var aMap = api.require('aMap');
+      aMap.searchInCity({
+          city: city,
+          keyword: input.value,
+          offset: 20,
+          page: 1,
+          sortrule: 0
+       }, function(ret) {
+          if (ret.status) {
+            // console.log(JSON.stringify(ret))
+              var view = '';
+              for(var i =0;i<ret.pois.length;i++){
+                view += '<div class="option" onclick = select("'+ret.pois[i].address+'")>'+
+                    '<div class="icon"></div>'+
+                    '<div class="info">'+
+                        '<div class="top">'+ret.pois[i].name+'</div>'+
+                        '<div class="bottom">'+ret.pois[i].address+'</div>'+
+                    '</div>'+
+                '</div>'
+              }
+
+              $("#list").html(view);
+          }
+      });
+
+});
+input.onkeyup = function () {
+    obj.input = input.value;
+};
+
+//清空input的值
+function clearInput(){
+  $("#myinput").val("");
+}
+
+//选中搜索出来的具体地址
+function select(address_){
+  api.execScript({
+        name: 'setaddress',
+        frameName: 'setaddress_frame',
+        script: 'setAddressDetail(\'' + address_ + '\');'
+    });
+    api.closeWin();
+}
+</script>
 </html>
