--- a/html/coupon_frame.html
+++ b/html/coupon_frame.html
@@ -17,13 +17,17 @@
             height:auto;
             padding:20px 10px;
             box-sizing: border-box;
+
         }
         .item{
             width: 100%;
             height: 120px;
             box-sizing: border-box;
             background: url('../image/coupon_background.png') no-repeat center center;
-            background-size:auto 108px;
+            background-size:auto 100px;
+            background-color: #fff;
+            margin-bottom: 20px;
+            border-radius: 16px;
         }
         .item .title{
             width:30px;
@@ -35,7 +39,7 @@
             float: left;
         }
         .item .price{
-            width:150px;
+            width: 120px;
             float: left;
             font-size:42px;
             font-weight:bold;
