--- a/html/setting.html
+++ b/html/setting.html
@@ -13,10 +13,10 @@
         height: 50px;
         background-color: #e3007f
     }
-    
+
     header .back {
         position: absolute;
-        bottom: 0;
+        top:26px;
         left: 0;
         width: 50px;
         height: 50px;
@@ -25,7 +25,7 @@
         background-size: 11px 18px;
         background-repeat: no-repeat;
     }
-    
+
     header h1 {
         width: 100%;
         height: 50px;
@@ -39,13 +39,29 @@
 
 <body>
     <header id="header">
-        <div class="back"></div>
+        <div class="back" onclick="api.closeWin()"></div>
         <h1>设置</h1>
     </header>
 </body>
 <script type="text/javascript" src="../script/api.js"></script>
 <script type="text/javascript">
 apiready = function() {
+    var header = document.querySelector("#header");
+    $api.fixStatusBar(header);
+    var y = $api.getStorage('headerH');
+    api.openFrame({
+        name: 'setting_frame',
+        url: './setting_frame.html',
+        rect: {
+            x: 0,
+            y: y,
+            w: "auto",
+            h: 'auto'
+        },
+        pageParam: {
+            name: 'test'
+        },
+    });
 
 };
 </script>
